# social-media-restAPI

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
api/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
api/management/commands/: delete_soft_deleted_posts.py
api/migrations/: 0001_initial.py
myproject/: settings.py  urls.py
